<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_delete_book"
        android:title="@string/delete_book"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_save_book"
        android:title="@string/save_book"
        android:icon="@drawable/ic_action_tick"
        app:showAsAction="ifRoom|withText"/>
</menu>
